# pfc_init

./: .gitignore  .~lock.pfcinit_performance_data.csv#  .~lock.pfcinit_performance_data_new.ods#  README.md  pfcinit_performance_data.csv  pfcinit_performance_data.ods  pfcinit_performance_data_new.ods
cmake/: CMakeCache.txt  CMakeLists.txt  ColorFilterTesting  CreateNeedleTemplate  Makefile  NMRotations  NMSURF  NeedleMatch  OpenCV_Practice.cbp  TestCannyThreshold  batch_init  cmake_install.cmake  manual_localize  pfc_init  solve_lin_sys  viz_test
include/: csv_reader.h  matcher.h  needle_image.h  needle_pose.h  needle_template.h  pfc_initializer.h  pfc_initializer_constants.h  pose_helper.h  template_match.h
positions/: ground_truths.txt  needle_position.txt  needle_positions.csv  positions.txt
result_data/: pfcinit_performance_data.csv  pfcinit_performance_data_2020-07-16-12:50:14.csv  pfcinit_performance_data_2020-07-16-13:17:36.csv  pfcinit_performance_data_2020-07-16-16:00:02.csv
src/: CMakeCache.txt  CMakeLists.txt  CSVReader  CSVReader.cpp  CSVReader.hpp  ColorFilterTesting.cpp  Makefile  NMSURF.cpp  NeedleImage.cpp  NeedleImage.hpp  NeedleMatch.cpp  NeedlePose.cpp  NeedlePose.hpp  NeedleTemplate.cpp  NeedleTemplate.hpp  Objectification.txt  OpenCV_Practice.cbp  PfcInit.cpp  PfcInit.hpp  PfcInitConstants.hpp  R2Q  RPYtoQuaternion.cpp  TemplateMatch.cpp  TemplateMatch.hpp  TestCannyThreshold.cpp  cmake_install.cmake  csv_reader.cpp  main  main.cpp  matcher.cpp  meta_path  meta_path.cpp  needle_image.cpp  needle_pose.cpp  needle_template.cpp  pencv_cudaimgproc  pfc_init  pfc_init.cpp  pfc_init.hpp  pfc_init_cuda  (+6 more)
src/NeedleGeneration/: NeedleGenerator.cpp
src/helpers/: TestCannyThreshold.cpp  batch_init.cpp  meta_path.cpp  triangulate_needle_pos.cpp
src/old/: CNT  CreateNeedleTemplate.cpp  Makefile  NMSURF.cpp  NeedleMatch  NeedleMatch.cpp  NeedleMatch.hpp  NeedleMatchCuda  NeedleMatchCuda.cu  NeedleMatchCuda.hpp  manual_localize.cpp  pfc_init_cuda.cu  solve_lin_sys.cpp  version  version.cpp  viz_test.cpp  vt
